@@ -78,7 +78,7 @@ class CleanupChromiumLinuxCrashLogs(shell.ShellCommand):
 
 
 def appendCustomBuildFlags(step, platform):
-    if platform in ('gtk', 'wx', 'qt', 'chromium', 'wincairo'):
+    if platform in ('gtk', 'wx', 'qt', 'chromium', 'wincairo', 'efl'):
         step.setCommand(step.command + ['--' + platform])
 
 
